added error testing to calculator

--- a/01-getting-started/src/index.html
+++ b/01-getting-started/src/index.html
@@ -208,6 +208,6 @@
                 }
             }
         </script>
-        <script defer src="scripts/Calculator.js" />
+        <script type="module" defer src="scripts/Calculator.js" />
         </body>
 </html>
