--- a/01-getting-started/src/index.html
+++ b/01-getting-started/src/index.html
@@ -98,7 +98,7 @@
 
         </div>
         <!--Calculator-->
-        <div class="container">
+        <div class="container" id="mycalculator" </div>>
             <div class="box">
                 <div class="w3-container w3-border w3-margin-bottom w3-large w3-padding">
                     <h2 class="w3-center">My Calculator</h2>
@@ -151,7 +151,7 @@
                 </div>
             </div>
         </div>
-        <div class="section">
+        <div class="container" id="mytaxcalculator">
             <div id="canadian-taxes">
                 <!--https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/canadian-income-tax-rates-individuals-current-previous-years.html#federal-->
                 <h3>Canadian Taxes</h3>
