Fix merge conflict

--- a/01-getting-started/src/index.html
+++ b/01-getting-started/src/index.html
@@ -155,7 +155,7 @@
             <div id="canadian-taxes">
                 <!--https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/canadian-income-tax-rates-individuals-current-previous-years.html#federal-->
                 <h3>Canadian Taxes</h3>
-                <h4>Federal tax on taxable income manual calculation</h4>
+                <h4>Federal tax on taxable income calculation</h4>
                 <div class="container ">
                     <div class="box">
                         <div class="row">
