Completed Working with Arrays

--- a/01-getting-started/src/index.html
+++ b/01-getting-started/src/index.html
@@ -98,7 +98,7 @@
 
         </div>
         <!--Calculator-->
-        <div class="w3-content w3-container w3-padding-64 info-box" id="mycalculator" </div>>
+        <div class="w3-content w3-container w3-padding-64 info-box" id="mycalculator" </div>
             <div class="box">
                 <div class="w3-container w3-border w3-margin-bottom w3-large w3-padding">
                     <h2 class="w3-center">My Calculator</h2>
@@ -160,19 +160,19 @@
                     <div class="box">
                         <div class="row">
                             <label class="line" for="txtIncome">Enter you taxable income</label>
-                            <input class="txtinput" type="text" name="txtIncome" id="txtIncome" value="">
+                            <input class="txtInput" type="text" name="txtIncome" id="txtIncome" value="">
                         </div>
                         <div class="row">
                             <label class="line" for="txtResult">Tax Calculation</label>
-                            <input class="txtinput" type="text" name="txtResult" id="txtResult" disabled>
+                            <input class="txtInput" type="text" name="txtResult" id="txtResult" disabled>
                         </div>
                         <div class="row">
                             <label class="line" for="txtOvertime">Overtime Income</label>
-                            <input class="txtinput" type="text" name="txtOvertime" id="txtOvertime">
+                            <input class="txtInput" type="text" name="txtOvertime" id="txtOvertime">
                         </div>
                         <div class="row">
                             <label class="line" for="txtOvertimeTax">Overtime Tax Calculation</label>
-                            <input class="txtinput" type="text" name="txtOvertimeTax" id="txtOvertimeTax" disabled>
+                            <input class="txtInput" type="text" name="txtOvertimeTax" id="txtOvertimeTax" disabled>
                         </div>
                         <div class="row">
                             <label class="line" for="txtDifference">Tax on overtime</label>
@@ -189,7 +189,22 @@
             </div>
         </div>
 
+        <!-- Working with Arrays -->
+        <div class="w3-content w3-container w3-padding-64 info-box" id="working-with-arrays">
+            <h2>Working with Arrays</h2>
+            <div class="">
+                <input type="text" id="txtArrayNumber">
+            </div>
+            <div id="btn-array-group">
+                <input class="w3-btn w3-one w3-teal control calculate-button" id="btnAdd" type="button" value="Add">
+                <input class="w3-btn w3-one w3-teal control calculate-button" id="btnShow" type="button" value="Show">
+                <input class="w3-btn w3-one w3-teal control calculate-button" id="btnTotal" type="button" value="Total">
+                <input class="w3-btn w3-one w3-teal control calculate-button" id="btnClear" type="button" value="Clear">
+            </div>
+            <div id="txtMessageBoard">
 
+            </div>
+        </div>
         <!-- ---------- Second Parallax Image with Size------------------ -->
 
         <div class="bgimg-2 w3-display-container w3-opacity-min">
@@ -206,7 +221,8 @@
 
         <!-- Footer -->
         <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-            <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+            <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the
+                top</a>
             <div class="w3-xlarge w3-section">
                 <i class="fa fa-facebook-official w3-hover-opacity"></i>
                 <i class="fa fa-instagram w3-hover-opacity"></i>
