--- a/01-getting-started/src/index.html
+++ b/01-getting-started/src/index.html
@@ -98,12 +98,12 @@
 
         </div>
         <!--Calculator-->
-        <div class="w3-content w3-container w3-padding-64 info-box" id="mycalculator" </div>
+        <div class="w3-content w3-container w3-padding-64 info-box" id="myCalculator" </div>
             <div class="box">
                 <div class="w3-container w3-border w3-margin-bottom w3-large w3-padding">
                     <h2 class="w3-center">My Calculator</h2>
                     <div class="w3-container">
-                        <label id="lblnumber1" class="w3-quarter control" for=" number1">Number 1:
+                        <label class="w3-quarter control" for="lblNumber1">Number 1:
                         </label>
                         <input id="txtNumber1" class="w3-threequarter w3-right-align control" type="text" name="number1"
                             value="0" id="number1">
@@ -151,7 +151,7 @@
                 </div>
             </div>
         </div>
-        <div class="w3-content w3-container w3-padding-64 info-box" id="mytaxcalculator">
+        <div class="w3-content w3-container w3-padding-64 info-box" id="myTaxCalculator">
             <div id="canadian-taxes">
                 <!--https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/canadian-income-tax-rates-individuals-current-previous-years.html#federal-->
                 <h3>Canadian Taxes</h3>
@@ -176,11 +176,11 @@
                         </div>
                         <div class="row">
                             <label class="line" for="txtDifference">Tax on overtime</label>
-                            <input class="txtinput" type="text" name="txtDifference" id="txtDifference" disabled>
+                            <input class="txtInput" type="text" name="txtDifference" id="txtDifference" disabled>
                         </div>
                         <div class="row">
                             <label class="line" for="txtTaxRate">Tax Rate on overtime</label>
-                            <input class="txtinput" type="text" name="txtTaxRate" id="txtTaxRate" disabled>
+                            <input class="txtInput" type="text" name="txtTaxRate" id="txtTaxRate" disabled>
                         </div>
                         <button id="btnCalculateTax" class="w3-btn w3-block w3-teal control calculate-button"
                             type="submit">Calculate Tax</button>
@@ -192,16 +192,33 @@
         <!-- Working with Arrays -->
         <div class="w3-content w3-container w3-padding-64 info-box" id="working-with-arrays">
             <h2>Working with Arrays</h2>
-            <div class="">
-                <input type="text" id="txtArrayNumber">
+            <div>
+                <input class="numberInput" type="text" id="txtArrayNumber">
             </div>
             <div id="btn-array-group">
-                <input class="w3-btn w3-one w3-teal control calculate-button" id="btnAdd" type="button" value="Add">
-                <input class="w3-btn w3-one w3-teal control calculate-button" id="btnShow" type="button" value="Show">
-                <input class="w3-btn w3-one w3-teal control calculate-button" id="btnTotal" type="button" value="Total">
-                <input class="w3-btn w3-one w3-teal control calculate-button" id="btnClear" type="button" value="Clear">
+                <input class="w3-btn w3-one w3-teal control calculate-button btn" id="btnAdd1" type="button"
+                    value="Add">
+                <input class="w3-btn w3-one w3-teal control calculate-button btn" id="btnShow1" type="button"
+                    value="Show">
+                <input class="w3-btn w3-one w3-teal control calculate-button btn" id="btnTotal1" type="button"
+                    value="Total">
+                <input class="w3-btn w3-one w3-teal control calculate-button btn" id="btnClear1" type="button"
+                    value="Clear">
             </div>
-            <div id="txtMessageBoard">
+            <div class="messageBoard" id="txtMessageBoard1">
+
+            </div>
+        </div><!-- Working with Dictionaries -->
+        <div class="w3-content w3-container w3-padding-64 info-box" id="working-with-arrays">
+            <h2>Working with Dictionaries</h2>
+            <div>
+                <input class="numberInput" type="text" id="txtProvince">
+            </div>
+            <div id="btn-array-group">
+                <input class="w3-btn w3-one w3-teal control calculate-button btn" id="btnLookUp" type="button"
+                    value="Look Up">
+            </div>
+            <div class="messageBoard" id="txtMessageBoard2">
 
             </div>
         </div>
